package bif3.swen1.Classes;

public class Battle {

    private User[] contestants;
    private int turnCounter;
    private int maxTurns;
    private String[] log;

    public void matchMaking(){}
    public void eloCalc(){}
    public void fight(){}
    public void effectiveness(){}
}
