package bif3.swen1.Classes;

public class ServerManager {

    private User managingUser;

    public void register(){}
    public void login(){}
    public void buyPack(){}
    public void battle(){}
    public void seeScoreboard(){}
    public void editProfile(){}



}
