package bif3.swen1.Classes;

import bif3.swen1.Enum.Elements;
import bif3.swen1.Enum.Rarities;

public class Spell extends Card{

    public Spell(String name, Elements element, Rarities rarity, int damage) {
        super(name, element, rarity, damage);
    }

    @Override
    public String toString() {
        return "SPELL" + super.toString();
    }
}
