package bif3.swen1.Classes;

public class Trade {

    private User tradingUser;
    private Card postedCard;

    public void getCost(){}
}
